<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Book Store</string>

    <string name="book_detail">Book Detail</string>

    <string name="edit_book">Edit Book</string>

    <string name="add_book">Add a Book</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There is no books in the store</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Label for buy button -->
    <string name="buy">Buy</string>

    <!-- Label for currency text view -->
    <string name="currency">SAR</string>

    <!-- Label for stock unit text view -->
    <string name="pieces">PCS</string>

    <!-- Label for book information in the editor [CHAR LIMIT=30] -->
    <string name="book_info">Book Info</string>

    <!-- Text hint for book title field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">Title</string>

    <!-- Text hint for book author field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_author">Author</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="supplier_info">Supplier Info</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Name</string>

    <!-- Text hint for supplier number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_number">Supplier Number</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor menu option to edit book [CHAR LIMIT=20] -->
    <string name="action_edit">Edit</string>

    <!-- Label for editor overflow menu option that order the current book [CHAR LIMIT=20] -->
    <string name="action_order">Order</string>

    <string name="out_of_stock">Out Of Stock</string>

    <!-- Toast message when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <string name="can_not_be_saved">Can not be saved you should fill all the fields</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>


</resources>
