<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <!-- Book info -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/book_info" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Title field -->
            <EditText
                android:id="@+id/edit_book_title"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords" />

            <!-- Author field -->
            <EditText
                android:id="@+id/edit_book_author"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_author"
                android:inputType="textCapWords" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_book-quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_quantity"
                android:inputType="number" />

            <!-- Input fields -->
            <RelativeLayout style="@style/EditorFieldStyle">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_book-price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_price"
                    android:inputType="number" />

                <!-- Currency (SAR) -->
                <TextView
                    android:id="@+id/label_currency"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/currency" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier info -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_info" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <!-- Number field -->
            <EditText
                android:id="@+id/edit_supplier_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_number"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
