<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of books -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#2B3D4D"
        tool:text="Book Name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/name"
        android:layout_marginTop="@dimen/activity_margin"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        tool:text="90" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_toRightOf="@id/price"
        android:fontFamily="sans-serif"
        android:text="@string/currency"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#228B22"
        android:text="@string/buy"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/pcs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/buy"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/pieces"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buy"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@id/pcs"
        android:layout_toStartOf="@id/pcs"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        tool:text="50" />

</RelativeLayout>